# dewit

./: Cargo.toml  README.md  Rocket.toml  TODO.md  dummy.sql  schema.sql  testing.db
queries/: delete_item.sql  five_low.sql  get_all_todos.sql  mark_done.sql  new_todo.sql  three_medium.sql  two_high.sql
src/: api.rs  main.rs
